# WindowsHoneypot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  honeypot_class_diagram_full.mmd  main.py  pyproject.toml
config/: honeypot.yaml
core/: config_manager.py  logger.py  orchestrator.py
logs/: service_status.json
services/admin/: admin_service.py
services/admin/templates/: log_view.html  login.html  logs.html
services/dns/: dns_service.py
services/ftp/: ftp_service.py
services/ftp/fakefiles/: secret.docx  welcome.txt
services/smb/: smb_service.py
services/ssh/: ssh_service.py  windows_banner.py  windows_shell.py
services/web/: init_pms_db.py  pms.db  web_honeypot.py
services/web/static/: style.css
services/web/templates/: add_product.html  dashboard.html  edit_product.html  login.html  service_unavailable.html
services/web/templates/admin/: login.html  panel.html
