[project]
name = "windowsserverhoneypot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.21.0",
    "dnslib>=0.9.26",
    "impacket>=0.12.0",
    "loguru>=0.7.3",
    "pyftpdlib>=2.0.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "watchdog>=6.0.0",
]
